--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -9,7 +9,12 @@
       </footer>
     </blockquote>
     <div class="created">
+      <% Rails.logger.debug(quote.created_at.inspect) %>
+      <% if quote.created_at == nil %>
+      <div></div>
+      <% else %>
       <%= time_ago_in_words(quote.created_at) %> ago
+      <% end %>
     </div>
   </section>
 <% end %>
